// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Component should return a react router tag, given a 'to' attribute 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: calc(1rem * 1);
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: hsl(186.8,100%,41.6%);
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:active {
  color: hsl(207,90%,54%);
}

<a
  className="c0"
  href="./home"
  onClick={[Function]}
>
  Lorem Ipsum
</a>
`;

exports[`Link Component should return an anchor tag 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: calc(1rem * 1);
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: hsl(186.8,100%,41.6%);
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:active {
  color: hsl(207,90%,54%);
}

<a
  className="c0"
>
  Lorem Ipsum
</a>
`;

exports[`Link Component should return an anchor tag with an href, given the href attribute 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: calc(1rem * 1);
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: hsl(186.8,100%,41.6%);
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:active {
  color: hsl(207,90%,54%);
}

<a
  className="c0"
  href="./home"
>
  Lorem Ipsum
</a>
`;
